<resources>
    <string name="app_name">Github user\'s Apps</string>
    <string name="splash_image">Splash Activity Image</string>
    <string name="detail_user">User\'s Detail</string>
    <string name="user_image">User Image</string>
    <string name="user_name">Triwibowo</string>
    <string name="txt_user_name">User Name</string>
    <string name="divider">Divider</string>
    <string name="txt_user_company">Company</string>
    <string name="user_company">Dicoding Indonesia</string>
    <string name="user_full_name">Dicoding</string>
    <string name="tab_follower">Follower</string>
    <string name="tab_following">Following</string>
    <string name="txt_full_name">Full Name</string>
    <string name="search_here">Search Here</string>
    <string name="change_language">Change Language</string>
    <string name="user_not_found">User not found. Please check your username… </string>
    <string name="error_access_api">Error while accessing API</string>
    <string name="submission">Github User\'s Search Apps</string>
    <string name="error">Error</string>
    <string name="add_favorite_user">ADD FAVORITE</string>
    <string name="delete_favorite_user">Delete Favorite</string>
    <string name="favoriteList">User Favorite</string>
    <string name="deleteConfirm">Are you sure you want delete this?</string>
    <string name="ok">YES</string>
    <string name="no">NO</string>
    <string name="txt_user_followingUrl">Following URL</string>
    <string name="txt_user_followerUrl">Follower URL</string>
    <string name="txt_user_location">Location</string>
    <string name="favoriteDetail">Favorite Details</string>
    <string name="nodata">No Data</string>
    <string name="reminder">Reminder Alarm</string>
    <string name="Alarm">Alarm</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Alarm Settings</string>
    <string name="setalarm">Set Alarm</string>
    <string name="setalarmsuccess">Set Alarm Success</string>
    <string name="alamisset">Alarm has been set!</string>
    <string name="imageAlarm">Image For Alarm</string>
    <string name="enterTime">Enter Time</string>
    <string name="enterTimeWarning">Please enter the time first!</string>
    <string name="alarmCancel">Cancel alarm successfully</string>
    <string name="details">Details</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="cancelAlarm">Successfully canceled the alarm</string>
    <string name="userExists">User favorites have been added before!</string>
    <string name="delete_favorite">Delete</string>
    <string name="imageFav">Favorite Detail Image</string>
    <string name="appwidget_text">FAVORITE USER\'S BANNER</string>
    <string name="empty_text">NO DATA</string>
    <string name="searchUser">Search User</string>
    <string name="alarmMessage">Let\'s find out popular user on Github!</string>
    <string name="note">" Click the text above to set the alarm"</string>
</resources>
